--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^2.3.3",
     "helmet": "^4.6.0",
     "multer": "^1.4.2",
-    "request": "^2.88.2",
     "soundcloud-scraper": "^4.0.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/form-data": "^2.5.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^15.0.1",
     "@types/request": "^2.48.5",
