Added a port variable and fixed start script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node api/server.js",
+    "start": "node dist/server.js",
     "dev": "tsc -w & nodemon server.ts"
   },
   "author": "",
